for test deployment

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -114,6 +114,20 @@
           ]
         }
       ]
+    },
+    "paymentsApi": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "paymentsApi",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
     }
   },
   "function": {
