--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -237,8 +237,51 @@
     }
   },
   "storage": {
-    "bookingsTable": {
-      "service": "DynamoDB",
+    "contractorImages": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "clientapp4182a555",
+          "attributes": [
+            "UserPoolId"
+          ]
+        },
+        {
+          "category": "auth",
+          "resourceName": "userPoolGroups",
+          "attributes": [
+            "UserGroupRole"
+          ]
+        },
+        {
+          "category": "auth",
+          "resourceName": "userPoolGroups",
+          "attributes": [
+            "ContractorGroupRole"
+          ]
+        },
+        {
+          "category": "auth",
+          "resourceName": "userPoolGroups",
+          "attributes": [
+            "AdminGroupRole"
+          ]
+        }
+      ]
+    }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2021-12-14T12:54:12.185Z"
+    }
+  },
+  "analytics": {
+    "clientapp": {
+      "service": "Pinpoint",
       "providerPlugin": "awscloudformation"
     }
   }
