--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.24.0",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
+    "helper-aws-comp-lib": "^0.1.2",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.0.5",
@@ -27,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "sentiment": "^5.0.2",
     "styled-components": "^5.3.3",
     "twin.macro": "^2.8.1",
     "typescript": "^4.1.2",
@@ -58,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.18",
     "autoprefixer": "^9.8.8",
     "craco-alias": "^3.0.1",
     "postcss": "^7.0.39",
